First whack at defining semantics of MAIN subs. Typo from Aaron Crane++.
git-svn-id: http://svn.pugscode.org/pugs@23524 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -440,7 +440,7 @@ can speed it up.)
 
 Some object types can behave as value types.  Every object can produce
 a "safe key identifier" (C<SKID> for short) that uniquely identifies the
-object for hashing and other value-base comparisons.  Normal objects
+object for hashing and other value-bases comparisons.  Normal objects
 just use their address in memory, but if a class wishes to behave as a
 value type, it can define a C<.SKID> method that makes different objects
 look like the same object if they happen to have the same contents.
